--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,58 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.GridPane?>
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+
+<!--SCENE BUILDER WAS USED FOR THIS -->
+
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="387.0" prefWidth="389.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <children>
+      <VBox prefHeight="387.0" prefWidth="145.0">
+         <children>
+            <ListView fx:id="employeeListView" prefHeight="387.0" prefWidth="152.0" />
+            <Button mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="25.0" prefWidth="145.0" text="Remove Selected" textFill="#f20404" />
+         </children>
+      </VBox>
+      <VBox fx:id="firstNameTextField" prefHeight="387.0" prefWidth="240.0">
+         <children>
+            <HBox prefHeight="26.0" prefWidth="250.0">
+               <children>
+                  <Label prefWidth="100" text="First Name:" />
+                  <TextField fx:id="firstNameTexField" prefWidth="150" />
+               </children>
+            </HBox>
+            <HBox prefHeight="20.0" prefWidth="250.0">
+               <children>
+                  <Label prefWidth="100" text="Last Name:" />
+                  <TextField fx:id="lastNameTextField" prefWidth="150" />
+               </children>
+            </HBox>
+            <HBox>
+               <children>
+                  <Label prefWidth="100" text="Is Active" />
+                  <CheckBox fx:id="isActiveCheckBox" />
+               </children>
+            </HBox>
+            <HBox>
+               <children>
+                  <Label prefWidth="100" text="Misc." />
+                  <TextField prefWidth="150" />
+               </children>
+            </HBox>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#clearButtonClicked" prefHeight="25.0" prefWidth="67.0" text="Clear" />
+                  <VBox prefHeight="100.0" prefWidth="62.0" />
+                  <Button mnemonicParsing="false" onAction="#addButtonClicked" text="Add New" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </children>
+</HBox>
